--- a/BattleView/src/sample.fxml
+++ b/BattleView/src/sample.fxml
@@ -1,4 +1,4 @@
 <?import javafx.scene.layout.GridPane?>
-<GridPane fx:controller="sample.Controller"
+<GridPane fx:controller="Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
