starting shop menu: add shop cards and implement search. notice: code will be cleaned

--- a/Client/resources/styles/scroll_pane.css
+++ b/Client/resources/styles/scroll_pane.css
@@ -2,6 +2,6 @@
     -fx-background-color: transparent;
 }
 
-#profile_scroll {
+#background_transparent {
     -fx-background-color: transparent;
 }
